BP-2252 Add Spanish translation small fix

--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -305,7 +305,8 @@
 "Terms and Conditions:","Términos y condiciones:"
 "Please make sure all fields are filled in correctly before proceeding.","Antes de continuar, compruebe que ha rellenado todos los campos correctamente."
 "Not Applicable","No aplicable"
-"Yes","Sí, acepto los términos y condiciones de uso de Riverty | Afterpay."
+"Yes","Sí"
+"Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Sí, acepto los términos y condiciones de uso de Riverty | Afterpay."
 "Accept terms of use","Aceptar los términos de uso"
 "(DD/MM/YYYY)","(DD/MM/AAAA)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Quiere comentarnos algo acerca de esta versión beta? <a target=\"_blank\" href=\"%s\"> ¡Cuéntenoslo! </a>"
