--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -117,7 +117,7 @@
 "The (Merchant) Key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","De '(Merchant)Key' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Voeg uw Buckaroo merchant guid toe."
-"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
+"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
 "Transaction label","Transactie label"
 "The transaction description in Payment Plaza.","De omschrijving van de transactie in Payment Plaza."
 "Certificate label","Certificaat label"
@@ -306,7 +306,7 @@
 "Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Riverty | Afterpay"
 "Accept terms of use","Accepteer algemene voorwaarden"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
-"Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=\"_blank\" href=\"%s\"> Laat het ons weten! </a>"
+"Any comments about this Beta release? <a target=""_blank"" href=""%s""> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=""_blank"" href=""%s""> Laat het ons weten! </a>"
 "Buckaroo version","Buckaroo versie"
 "The transaction will be processed using %s.","De betaling zal verwerkt worden in %s."
 "The order has already been processed.","De bestelling is reeds verwerkt."
@@ -345,7 +345,7 @@
 "Send payment email","Stuur betalingsmail"
 "Whether to use separate order/authorization and capture/invoice calls or to use a combined 'payment invitation' call.","Of er een aparte order/authorize en capture/invoice call gedaan wordt of dat er een samengestelde 'payment invitation' call gebruikt wordt."
 "The selected payment method does not support the selected currency or the store's base currency.","De geselecteerde betaalmethode ondersteund niet de geselecteerde valuta of de winkel's basisvaluta."
-"Invoice with id \"%1\" does not exist.","Er bestaat geen factuur met de id \"%1\""
+"Invoice with id ""%1"" does not exist.","Er bestaat geen factuur met de id ""%1"""
 "The payment of the Customer's payment will be outsourced to Buckaroo. The invoice indicates how to pay the invoice (after reception of goods and/or services). The invoice must be paid within 14 (fourteen) days after the invoice date.","De afhandeling van de betaling van de Klanten wordt uitbesteed aan Buckaroo. Op de factuur staat hoe u (na ontvangst van goederen en/of diensten) de factuur dient te betalen. De factuur dient binnen 14 (veertien) dagen na factuurdatum betaald te worden."
 "You must check this box to indicate that you agree to the terms and conditions.","U dient dit vakje aan te klikken om aan te geven dat u akkoord gaat met de algemene voorwaarden."
 "According to our system, you have canceled the payment. If this is not the case, please contact us.","Uw betaling is volgens ons systeem door u geannuleerd. Mocht dit niet het geval zijn, neem dan contact met ons op."
@@ -395,7 +395,7 @@
 "Enter a desciption that the customer will recognize as the authorization here, e.g. your webshop or company name.","Vul hier een omschrijving in waarmee de klant de machtiging herkent, bijvoorbeeld uw webshop of bedrijfsnaam."
 "You have canceled the order. We kindly ask you to not complete the payment in the Payconiq app - Your order will not be processed. Place the order again if you still want to make the payment.","U heeft de bestelling geannuleerd. Indien u de QR code al heeft gescand, verzoeken wij u vriendelijk de betaling in de Payconiq app niet te voltooien - uw order zal niet verwerkt worden. Mocht u de betaling toch willen doen, plaats dan de bestelling opnieuw"
 "Identification number:","Identificatie nummer:"
-"(Or click here for the French translation: <a target=\"_blank\" href=\"%s\">terms and condition</a>.)","(Of klik hier voor de Franse vertaling: <a target=\"_blank\" href=\"%s\">aanvullende voorwaarden</a>.)"
+"(Or click here for the French translation: <a target=""_blank"" href=""%s"">terms and condition</a>.)","(Of klik hier voor de Franse vertaling: <a target=""_blank"" href=""%s"">aanvullende voorwaarden</a>.)"
 "You have canceled the order. We kindly ask you to not complete the payment in the Payconiq app - Your order will not be processed. Place the order again if you still want to make the payment.","U heeft de bestelling geannuleerd. Indien u de QR code al heeft gescand, verzoeken wij u vriendelijk de betaling in de Payconiq app niet te voltooien - uw order zal niet verwerkt worden. Mocht u de betaling toch willen doen, plaats dan de bestelling opnieuw"
 "Or CVV or CVC.","Of CVV of CVC"
 "A 3 or 4 digit code located to the right of signature strip on the back of your card, separate from the card number.","Een 3 of 4-cijferige code rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer."
