BP-2368 Modernize other fields

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -399,7 +399,7 @@
 "Month:","Monat:"
 "Card:","Karte:"
 "Card number:","Kartennummer:"
-"Cardholder:","Kartenhalter:"
+"Name on card:","Kartenhalter:"
 "Cvc / Cvv Code:","Cvc / Cvv-Code:"
 "Please make sure all fields are filled in correctly before proceeding.","Bitte stellen Sie sicher, dass alle Felder korrekt ausgefüllt sind, bevor Sie fortfahren."
 "Orders with discount and paid with Klarna can not be partially invoiced. %1 More Information %2","Bestellungen mit Rabatt, die mit Klarna bezahlt wurden, können nicht teilweise in Rechnung gestellt werden. %1 Mehr Informationen %2"
