--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -403,7 +403,7 @@
 "Month:","Maand:"
 "Card:","Kaart:"
 "Card number:","Kaartnummer:"
-"Cardholder:","Kaarthouder:"
+"Name on card:","Kaarthouder:"
 "Cvc / Cvv Code:","Cvc / Cvv Code:"
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct zijn ingevuld voordat u doorgaat."
 "Orders with discount and paid with Klarna can not be partially invoiced. %1 More Information %2","Orders met korting en betaald met Klarna kunnen niet gedeeltelijk worden gefactureerd. %1 Meer Informatie %2"
