BP-2621 Rename 'Creditcards' into 'Credit and debit card'

--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -36,10 +36,10 @@
 "Display only for selected IPs","Toon alleen voor specifieke IP's"
 "Show method only to Magento set IPs.","Toon alleen voor specifieke IP's ingesteld bij Magento."
 "Magento developer client restrictions.","Toon deze betaalmethode alleen aan geselecteerde Magento IPs. Deze optie is voor ontwikkelaars wanneer je een specifieke betaalmethode wilt testen zonder dat deze publiekelijk wordt getoond."
-"Creditcards","Creditcards"
-"Enable Creditcards","Creditcards inschakelen"
-"Allowed Creditcards","Geaccepteerde creditcards"
-"Select payment method specific Creditcards","Selecteer specifieke creditcards voor de betaalmethode."
+"Credit and debit cards","Credit and debit cards"
+"Enable credit and debit cards","Creditcards inschakelen"
+"Allowed credit and debit cards","Geaccepteerde creditcards"
+"Select payment method specific credit and debit card","Selecteer specifieke creditcards voor de betaalmethode."
 "American Express Specific","American Express Specifiek"
 "Verify address","Adresvalidatie"
 "Set true to verify the address at American Express. Set false to disable address verification","Zet op 'ja' om het adres bij American Express te veriferen. Zet op 'nee' om het adresverificatie uit te schakelen."
