--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -36,10 +36,10 @@
 "Display only for selected IPs","Nur für bestimmte IPs anzeigen"
 "Show method only to Magento set IPs.","Nur für bestimmte in Magento festgelegte IPs anzeigen."
 "Magento developer client restrictions.","Zeigen Sie diese Zahlungsmethode nur ausgewählten Magento-IPs an. Diese Option ist für Magento-Entwickler gedacht, wenn Sie eine bestimmte Zahlungsmethode testen möchten, ohne sie öffentlich zu zeigen."
-"Credit and debit cards","Kreditkarten"
-"Enable credit and debit cards","Kreditkarten aktivieren"
-"Allowed credit and debit cards","Akzeptierte Kreditkarten"
-"Select payment method specific Credit and debit card.","Wählen Sie bestimmte Kreditkarten für die Zahlungsmethode aus."
+"Credit and debit cards","Kartenzahlung"
+"Enable credit and debit cards","Kartenzahlung aktivieren"
+"Allowed credit and debit cards","Akzeptierte Kartenzahlung"
+"Select payment method specific Credit and debit card.","Wählen Sie bestimmte Kartenzahlung für die Zahlungsmethode aus."
 "American Express Specific","American Express-spezifisch"
 "Verify address","Adressvalidierung"
 "Set true to verify the address at American Express. Set false to disable address verification","Kreuzen Sie 'Ja' an, um die Adresse mit American Express zu bestätigen. Auf 'no' setzen, um die Adressüberprüfung zu deaktivieren."
