--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -36,10 +36,10 @@
 "Display only for selected IPs","Afficher uniquement pour les adresses IP sélectionnées"
 "Show method only to Magento set IPs.","Afficher la méthode uniquement sur les adresses IP définies par Magento."
 "Magento developer client restrictions.","N'affichez ce mode de paiement qu'aux IP Magento sélectionnées. Cette option est destinée aux développeurs lorsque vous souhaitez tester un mode de paiement spécifique sans le montrer publiquement."
-"Credit and debit cards","Cartes de crédit"
-"Enable credit and debit cards","Activer les Cartes de crédit"
-"Allowed credit and debit cards","Cartes de crédit autorisées"
-"Select payment method specific Credit and debit card.","Sélectionnez les cartes de crédit spécifiques au mode de paiement."
+"Credit and debit cards","Cartes de crédit et de débit"
+"Enable credit and debit cards","Activer les cartes de crédit et de débit"
+"Allowed credit and debit cards","Cartes de crédit et de débit autorisées"
+"Select payment method specific Credit and debit card.","Sélectionnez les cartes de crédit et de débit spécifiques au mode de paiement."
 "American Express Specific","Spécifique à American Express"
 "Verify address","Vérifier l'adresse"
 "Set true to verify the address at American Express. Set false to disable address verification","Définissez true pour vérifier l'adresse auprès d'American Express. Définissez false pour désactiver la vérification d'adresse."
