--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -36,10 +36,10 @@
 "Display only for selected IPs","Mostrar solo para IP seleccionadas"
 "Show method only to Magento set IPs.","Mostrar método de pago solo para IP establecidas por Magento."
 "Magento developer client restrictions.","Esta opción es para desarrolladores, y se usa cuando se quiere probar un método de pago específico sin mostrarlo públicamente."
-"Credit and debit cards","Tarjetas de crédito"
-"Enable credit and debit cards","Activar tarjetas de crédito"
-"Allowed credit and debit cards","Tarjetas de crédito permitidas",
-"Select payment method specific Credit and debit card.","Seleccionar tarjetas de crédito específicas del método de pago"
+"Credit and debit cards","Tarjetas de crédito y débito"
+"Enable credit and debit cards","Activar tarjetas de crédito y débito"
+"Allowed credit and debit cards","Tarjetas de crédito y débito permitidas",
+"Select payment method specific Credit and debit card.","Seleccionar tarjetas de crédito y débito específicas del método de pago"
 "American Express Specific","Específico de American Express"
 "Verify address","Comprobar dirección"
 "Set true to verify the address at American Express. Set false to disable address verification","Elegir 'cierto' para comprobar la dirección en American Express. Elegir 'falso' para desactivar la comprobación de la dirección"
