--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -112,9 +112,9 @@
 "Secret key","Clé secrète"
 "Enter your Buckaroo Secret Key.","Entrez votre clé secrète Buckaroo"
 "The Secret Key can be retrieved in Payment Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clé secrète peut être récupérée dans Payment Plaza sous Configuration > Sécurité > Clé secrète. Pour obtenir de l'aide, contactez Buckaroo."
-"(Merchant) key","Clé (marchand)"
+"(Website) key","Clé (marchand)"
 "Enter your Buckaroo merchant/website key.","Entrez votre clé de marchand/site Web Buckaroo."
-"The (Merchant) Key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clé (marchande) peut être récupérée dans Payment Plaza sous My Buckaroo > Websites. Pour obtenir de l'aide, contactez Buckaroo."
+"The (Website) key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clé (marchande) peut être récupérée dans Payment Plaza sous My Buckaroo > Websites. Pour obtenir de l'aide, contactez Buckaroo."
 "(Merchant) guid","(Merchand) guid"
 "Enter your Buckaroo merchant guid.","Entrez votre 'guid' marchand Buckaroo."
 "The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","Le Guid (marchand) peut être récupéré dans Payment Plaza sous Mon Buckaroo > Détails > Guid. Pour obtenir de l'aide, contactez Buckaroo."
@@ -183,7 +183,7 @@
 "Buckaroo","Buckaroo"
 "Version &amp; Support","Version &amp; Soutien"
 "General configuration and account information","Configuration générale et informations sur le compte"
-"(Merchant) key","Clé (marchand)"
+"(Website) key","Clé (marchand)"
 "Debug information will be sent to these comma-separated email addresses","Les informations de débogage seront envoyées à ces adresses e-mail séparées par des virgules"
 "Debugging","Débogage"
 "Decide what to debug. Log files will be created within the var/log/Buckaroo/ directory.","Décidez quoi déboguer. Les fichiers journaux seront créés dans le répertoire var/log/Buckaroo/."
