--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -112,9 +112,9 @@
 "Secret key","Secret key"
 "Enter your Buckaroo Secret Key.","Voeg uw Buckaroo 'Secret Key' toe."
 "The Secret Key can be retrieved in Payment Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","De 'Secret Key' staat weergegeven in Payment Plaza onder Configuratie > Beveiliging > Secret Key."
-"(Merchant) key","(Merchant) key"
+"(Website) key","(Website) key"
 "Enter your Buckaroo merchant/website key.","Voeg uw Buckaroo merchant/website key toe."
-"The (Merchant) Key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","De '(Merchant)Key' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Websites."
+"The (Website) key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","De '(Merchant)Key' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Voeg uw Buckaroo merchant guid toe."
 "The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
@@ -183,7 +183,7 @@
 "Buckaroo","Buckaroo"
 "Version &amp; Support","Versie &amp; Ondersteuning"
 "General configuration and account information","Algemene configuratie en accountinformatie"
-"(Merchant) key","(Merchant) key"
+"(Website) key","(Website) key"
 "Debug information will be sent to these comma-separated email addresses","Debug-informatie zal verzonden worden naar deze, door een komma gescheiden, e-mailadressen"
 "Debugging","Debuggen"
 "Decide what to debug. Log files will be created within the var/log/Buckaroo/ directory.","Bepaal wat er gelogd wordt. Log bestanden worden aangemaakt in de var/log/Buckaroo/ folder."
