BP-2575 - Checkout Dutch translation improvements nl-NL BP-2576 - Checkout English translation improvements us-US

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -147,7 +147,7 @@
 "Fee percentage mode","Toeslag percentage modus"
 "This setting only applies to percentage-based Buckaroo fees.<br />Please choose over which amount the fee percentage is calculated.","Deze instelling is enkel van toepassing op percentage-gebaseerde toeslagen.<br />Kies s.v.p. over welk bedrag het toeslag percentage wordt berekend."
 "Please enter these fields as they appear on your bank account.","Vul de velden in zoals in uw bank account staat aangegeven."
-"You will receive an email with further payment instructions when you place your order.","Na het plaatsen van uw order ontvangt u een e-mail met de gegevens voor betaling."
+"You will receive an email with further payment instructions when you place your order.","Na het plaatsen van uw bestelling ontvangt u een e-mail met de gegevens voor de betaling."
 "Legend","Legenda"
 "Payment method","Betaalmethode"
 "Disabled","Uitgeschakeld"
@@ -225,11 +225,11 @@
 "Buckaroo Fee","Buckaroo toeslag"
 "Place Order","Plaats bestelling"
 "Select a bank:","Selecteer een bank:"
-"BIC number:","BIC nummer:"
-"Select a Credit Card or Debit Card:","Selecteer een Creditkaart of Debitkaart:"
-"Bank account holder","Rekeninghouder"
-"Bank account number","Rekeningnummer"
-"BIC Number","BIC nummer"
+"BIC number:","BIC code:"
+"Select a Credit Card or Debit Card:","Selecteer een Credit- of debitcard:"
+"Bank account holder","Naam rekeninghouder:"
+"Bank account number","Rekeningnummer (IBAN):"
+"BIC Number","BIC code:"
 "Disallowed file type.","Ongeldig bestandstype."
 "Online refunds are currently disabled for Buckaroo payment methods.","Online refunds zijn momenteel uitgeschakeld voor Buckaroo betaalmethodes"
 "Adjustment Refund","Aanpassingsbetaling"
@@ -281,13 +281,13 @@
 "They/them","Zij/ze"
 "I prefer not to say","Ik zeg het liever niet"
 "Billing Name:","Factuurnaam:"
-"Telephone:","Telefoon:"
+"Telephone:","Telefoonnummer:"
 "Date of Birth:","Geboortedatum:"
-"Bank Account Number:","Rekeningnummer:"
+"Bank Account Number:","Rekeningnummer (IBAN):"
 "Business Model:","Bedrijfsmodel:"
 "B2C - Business to Consumer","B2C - Business to Consumer"
 "B2B - Business to Business","B2B - Business to Business"
-"COC Number:","KVK nummer:"
+"COC Number:","KVK-nummer:"
 "Company Name:","Bedrijfsnaam:"
 "Cost Center:","Kostenplaats:"
 "VAT Number:","BTW nummer:"
@@ -394,7 +394,7 @@
 "Month:","Maand:"
 "Card:","Kaart:"
 "Card number:","Kaartnummer:"
-"Name on card:","Kaarthouder:"
+"Name on card:","Naam kaarthouder:"
 "Cvc / Cvv Code:","Cvc / Cvv Code:"
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct zijn ingevuld voordat u doorgaat."
 "Orders with discount and paid with Klarna can not be partially invoiced. %1 More Information %2","Orders met korting en betaald met Klarna kunnen niet gedeeltelijk worden gefactureerd. %1 Meer Informatie %2"
@@ -448,3 +448,7 @@
 "Pay rejected: It is not allowed to specify another country for the invoice and delivery address for Afterpay transactions.","Pay rejected: Het is niet toegestaan om voor Afterpay transacties een ander land voor het factuur en afleveradres op te geven."
 "-- Please Select Your Gender--","Selecteer uw geslacht"
 "Unfortunately the transaction was unsuccessful. Please try again or choose a different payment method.","Helaas is het op dit moment voor jou niet mogelijk om gebruik te maken van deze methode, selecteer een andere betaalmethode."
+"Billing Middle Name:","Factuur tussenvoegsel:"
+"E-mail","E-mail:"
+"Expiration:","Vervaldatum:"
+"Buckaroo Bancontact/Mister Cash","Buckaroo Bancontact"
