BP-2574 - Save Bank Transfer/IDEAL Payment Information in the magento 2 order

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -14,3 +14,5 @@
 "Email:","E-mail:"
 "Telephone","Phone number:"
 "Date of Birth:","Date of birth:"
+"Transfer Paymentreference","Transfer Payment Reference"
+"Transfer Accountholdername","Transfer Account Holder Name",
