BP-2574 - Add Translations

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -14,5 +14,13 @@
 "Email:","E-mail:"
 "Telephone","Phone number:"
 "Date of Birth:","Date of birth:"
+"Consumer Iban","Customer IBAN"
+"Consumer Name","Customer Account Holder Name"
+"Customer Account Name","Customer Account Holder Name"
+"Customer Bic","Customer BIC"
+"Customer Iban","Customer IBAN"
+"Transfer Amount","Transfer Amount"
 "Transfer Paymentreference","Transfer Payment Reference"
 "Transfer Accountholdername","Transfer Account Holder Name",
+"Transfer Iban","Transfer IBAN"
+"Transfer Bic","Transfer BIC"
