BP-2574 - Add Translations

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -452,3 +452,4 @@
 "Transfer Accountholdername","Name des Überweisungskontoinhabers",
 "Transfer Iban","Überweisungs-IBAN"
 "Transfer Bic","Überweisungs-BIC"
+"Waiting on consumer action","Warten auf den Kunden"
