--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -24,3 +24,4 @@
 "Transfer Accountholdername","Transfer Account Holder Name",
 "Transfer Iban","Transfer IBAN"
 "Transfer Bic","Transfer BIC"
+"Waiting on consumer action","Waiting for customer"
