--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -461,3 +461,4 @@
 "Transfer Accountholdername","Nombre del titular de la cuenta de destino",
 "Transfer Iban","IBAN de la transferencia"
 "Transfer Bic","BIC de la transferencia"
+"Waiting on consumer action","Esperando al consumidor"
