--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -452,3 +452,4 @@
 "Transfer Accountholdername","Nom du titulaire du compte du transfert",
 "Transfer Iban","IBAN du transfert"
 "Transfer Bic","BIC du transfert"
+"Waiting on consumer action","En attente du consommateur"
