--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -462,3 +462,4 @@
 "Transfer Accountholdername","Naam van de ontvanger",
 "Transfer Iban","IBAN van de ontvanger"
 "Transfer Bic","BIC van de ontvanger"
+"Waiting on consumer action","Wachten op de consument"
