BP-2575 - Checkout Dutch translation improvements nl-NL BP-2576 - Checkout English translation improvements us-US

--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -454,3 +454,4 @@
 "Transfer Iban","IBAN van de ontvanger"
 "Transfer Bic","BIC van de ontvanger"
 "Waiting on consumer action","Wachten op de consument"
+"Bancontact/Mister Cash","Buckaroo Bancontact"
