--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -3,16 +3,17 @@
 "Bank account holder","Account holder name:"
 "Bank account number","Account number (IBAN):"
 "Buckaroo Bancontact/Mister Cash","Buckaroo Bancontact"
+"Bancontact/Mister Cash","Buckaroo Bancontact"
 "Billing Name:","Billing name:"
 "Business Model:","Business model:"
 "COC Number:","CoC number:",
 "Company Name:","Company name:"
 "BIC Number","BIC number:"
 "Billing First Name:","Billing first name:"
-"Billing first name:","Billing middle name:"
+"Billing Middle Name:","Billing middle name:"
 "Billing Last Name:","Billing last name:"
 "Email:","E-mail:"
-"Telephone","Phone number:"
+"Telephone:","Phone number:"
 "Date of Birth:","Date of birth:"
 "Consumer Iban","Customer IBAN"
 "Consumer Name","Customer Account Holder Name"
