--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -463,3 +463,4 @@
 "Transfer Iban","IBAN van de ontvanger"
 "Transfer Bic","BIC van de ontvanger"
 "Waiting on consumer action","Wachten op de consument"
+"Transaction declined by processor: BAD_VALUE: Bad value: billing_address.family_name, shipping_address.family_name","Malheureusement, nous ne pouvons pas proposer Klarna pour le moment. Veuillez choisir un autre mode de paiement pour finaliser votre achat."
