--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -26,3 +26,4 @@
 "Transfer Iban","Transfer IBAN"
 "Transfer Bic","Transfer BIC"
 "Waiting on consumer action","Waiting for customer"
+"Transaction declined by processor: BAD_VALUE: Bad value: billing_address.family_name, shipping_address.family_name","Unfortunately we can't offer Klarna at this moment. Please choose a different payment method to complete your purchase."
