BP-2865 - Fixing issues

--- a/i18n/be_FR.csv
+++ b/i18n/be_FR.csv
@@ -1,4 +1,4 @@
-"Invoice handling","Gestion des factures"
+"Invoice Handling","Gestion des factures"
 "Create Invoice on Payment","Créer une facture lors du paiement"
 "Create Invoice on Shipment","Créer une facture lors de l'expédition"
 "Select the moment when the invoice should be created.","Sélectionnez le moment où la facture devrait être créée."
