--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -6,6 +6,8 @@
 "Frontend label","Label aan de voorkant"
 "Determines the frontend label shown.","De waarde zoals deze aan de voorkant wordt getoond."
 "Frontend sort order","Sortering aan de voorkant"
+"Consumer Financial Warning","Financiële Waarschuwing"
+"Due to the regulations for BNPL methods in The Netherlands you’ll  have to warn customers about using a BNPL plan because it can be easy to get into debt. When enabled a warning will be showed in the checkout. Please note that this setting only applies for customers in The Netherlands.","Vanwege de voorschriften voor achteraf betaalmethoden in Nederland dien je klanten te waarschuwen voor het gebruik van een achteraf betaalmethode omdat het gemakkelijk kan leiden tot schulden. Wanneer deze functie is ingeschakeld, wordt er een waarschuwing weergegeven tijdens het afrekenen. Let op dat deze instelling alleen van toepassing is op klanten in Nederland."
 "Determines the sorting of payment methods.","Bepaalt de volgorde van de betaalmethodes aan de voorkant."
 "Advanced Configuration","Geavanceerde opties"
 "Send order confirmation email","Verstuur order bevestigingsmail"
