BP-2872 - Make 'Create invoice after shipment' a general setting

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -456,3 +456,7 @@
 "This message is shown when the payment method is hidden. Maximum 280 characters.","Deze melding wordt getoond wanneer de betaalmethode is verborgen. Maximaal 280 karakters."
 "Pay rejected: It is not allowed to specify another country for the invoice and delivery address for Afterpay transactions.","Pay rejected: Het is niet toegestaan om voor Afterpay transacties een ander land voor het factuur en afleveradres op te geven."
 "-- Please Select Your Gender--","Selecteer uw geslacht"
+"Invoice Handling","Factuurafhandeling"
+"Create Invoice on Payment","Factuur aanmaken bij een succesvolle betaling"
+"Create Invoice on Shipment","Factuur aanmaken bij het verzending"
+"Select the moment when the invoice should be created.","Selecteer het moment waarop de factuur moet worden aangemaakt."
