BP-3297 - Remove "Mister Cash" name for Bancontact

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -80,8 +80,8 @@
 "Select the maximum reminder level buckaroo will use.","Wählen Sie die maximale Erinnerungsstufe aus, die Buckaroo anwendet."
 "SEPA direct debit","SEPA-Autorisierung"
 "Enable SEPA direct debit","SEPA-Autorisierung activieren"
-"Bancontact / Mister Cash","Bancontact / Mister Cash"
-"Enable Bancontact / Mister Cash","Bancontact / Mister Cash activieren"
+"Bancontact","Bancontact"
+"Enable Bancontact","Bancontact activieren"
 "Please enter a valid BIC number","Bitte geben Sie eine gültige BIC-Nummer ein"
 "Please select a issuer from the list","Wählen Sie eine Bank aus der Liste aus"
 "SOFORT","SOFORT"
