--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -2,8 +2,8 @@
 "Name on card:","Cardholder:"
 "Bank account holder","Account holder name:"
 "Bank account number","Account number (IBAN):"
-"Buckaroo Bancontact/Mister Cash","Buckaroo Bancontact"
-"Bancontact/Mister Cash","Buckaroo Bancontact"
+"Buckaroo Bancontact","Buckaroo Bancontact"
+"Bancontact","Buckaroo Bancontact"
 "Billing Name:","Billing name:"
 "Business Model:","Business model:"
 "COC Number:","CoC number:",
