--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -80,8 +80,8 @@
 "Select the maximum reminder level buckaroo will use.","Seleccione el nivel máximo de recordatorio que usará Buckaroo."
 "SEPA direct debit","SEPA Direct Debit"
 "Enable SEPA direct debit","Activar SEPA Direct Debit"
-"Bancontact / Mister Cash","Bancontact/Mister Cash"
-"Enable Bancontact / Mister Cash","Activar Bancontact/Mister Cash"
+"Bancontact","Bancontact"
+"Enable Bancontact","Activar Bancontact"
 "Please enter a valid BIC number","Introduzca un número BIC válido"
 "Please select a issuer from the list","Seleccione un emisor de la lista"
 "SOFORT","SOFORT"
