--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -80,8 +80,8 @@
 "Select the maximum reminder level buckaroo will use.","Sélectionnez le niveau de rappel maximal que buckaroo utilisera."
 "SEPA direct debit","Prélèvement SEPA"
 "Enable SEPA direct debit","Activer le prélèvement SEPA"
-"Bancontact / Mister Cash","Bancontact / Mister Cash"
-"Enable Bancontact / Mister Cash","Activer Bancontact / Mister Cash"
+"Bancontact","Bancontact"
+"Enable Bancontact","Activer Bancontact"
 "Please enter a valid BIC number","Veuillez entrer un numéro BIC valide"
 "Please select a issuer from the list","Sélectionnez une banque dans la liste"
 "SOFORT","SOFORT"
