--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -80,8 +80,8 @@
 "Select the maximum reminder level buckaroo will use.","Selecteer het maximale niveau van herinnering die Buckaroo toepast."
 "SEPA direct debit","SEPA machtiging"
 "Enable SEPA direct debit","SEPA machtiging inschakelen"
-"Bancontact / Mister Cash","Bancontact / Mister Cash"
-"Enable Bancontact / Mister Cash","Bancontact / Mister Cash inschakelen"
+"Bancontact","Bancontact"
+"Enable Bancontact","Bancontact inschakelen"
 "Please enter a valid BIC number","Voer een geldig BIC nummer in"
 "Please select a issuer from the list","Selecteer een bank uit de lijst"
 "SOFORT","SOFORT"
@@ -455,7 +455,7 @@
 "Transfer Iban","IBAN van de ontvanger"
 "Transfer Bic","BIC van de ontvanger"
 "Waiting on consumer action","Wachten op de consument"
-"Bancontact/Mister Cash","Buckaroo Bancontact"
+"Bancontact","Buckaroo Bancontact"
 "Transaction declined by processor: BAD_VALUE: Bad value: billing_address.family_name, shipping_address.family_name","Malheureusement, nous ne pouvons pas proposer Klarna pour le moment. Veuillez choisir un autre mode de paiement pour finaliser votre achat."
 "Show Issuer Selection in the Checkout","Weergeef de bankkeuze in de checkout"
 "When the \"NO\" option is selected, the issuer selection for iDEAL will not be displayed in the checkout. Instead, customers will be redirected to a separate page where they can choose their iDEAL issuer (i.e., their bank). On the other hand, selecting the "Enable" option will display the issuer selection directly in the checkout. It's important to note that enabling this option will incur additional costs from Buckaroo, estimated at around €0.002 for each transaction. For precise cost details, please reach out to <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a> directly.","When the \"NO\" option is selected, the issuer selection for iDEAL will not be displayed in the checkout. Instead, customers will be redirected to a separate page where they can choose their iDEAL issuer (i.e., their bank). On the other hand, selecting the "Enable" option will display the issuer selection directly in the checkout. It's important to note that enabling this option will incur additional costs from Buckaroo, estimated at around €0.002 for each transaction. For precise cost details, please reach out to <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a> directly.","Wanneer de optie 'Uitgeschakeld' is geselecteerd, zal de bankkeuze voor iDEAL niet worden weergegeven in de checkout. In plaats daarvan worden klanten doorgestuurd naar een aparte pagina waar ze hun eigen bank kunnen kiezen. Aan de andere kant zal het aanzetten van deze functie de bankkeuze direct in de checkout weergeven. Het is belangrijk om te melden dat het inschakelen van deze optie extra kosten met zich mee zal brengen van Buckaroo, geschat op ongeveer €0.002 per transactie. Voor nauwkeurige kostendetails kunt u rechtstreeks contact opnemen met <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a>."
