BP-3350 - Add translations for the giftcards method specific configuration page

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -308,8 +308,11 @@
 "Giftcards","Geschenkkarten"
 "Enable Giftcards","Geschenkkarten aktivieren"
 "Allowed giftcards","Akzeptierte Geschenkkarten"
-"Select which giftcards are available in the checkout. You can add new giftcards within Magento at → Stores → Buckaroo Giftcards.","Wählen Sie aus, welche Geschenkkarten für den Kunden verfügbar sind. Sie können neue Karten unter 'Stores > Buckaroo-Geschenkkarten' hinzufügen."
+"Select which giftcards are available in the checkout. You can add new giftcards within Magento at → Stores → Buckaroo Giftcards.","Wählen Sie aus, welche Geschenkkarten für den Verbraucher beim Checkout verfügbar sind. Neue Geschenkkarten können in Magento über → Stores → Buckaroo Giftcards hinzugefügt werden."
 "These options will be presented to the customer after Buckaroo has received the order. If left blank, the available options will be based on which Buckaroo payment options you have enabled.","Diese Optionen werden dem Kunden nach Eingang der Bestellung bei Buckaroo präsentiert. Wenn Sie das Feld leer lassen, basieren die verfügbaren Optionen darauf, welche Buckaroo-Zahlungsoptionen Sie aktiviert haben."
+"Sort Giftcards","Reihenfolge der Geschenkkarten"
+"Giftcard handling","Umgang mit Geschenkkarten"
+"How to show the giftcard payment method in the checkout. <br/><strong>Inline:</strong> giftcards are show seperate in checkout<br/><strong>Redirect:</strong> giftcards get redirected to the buckaroo checkout. <br/><strong>Important:</strong> Group giftcards can only be refunded from the Buckaroo Plaza.","Wie man die Geschenkkarten-Zahlungsmethode beim Checkout anzeigt. <br/><strong>Inline:</strong> Geschenkkarten werden beim Checkout separat angezeigt.<br/><strong>Redirect:</strong> Der Verbraucher wird zur Buckaroo-Zahlungsseite weitergeleitet, wo die Auswahl der Geschenkkarte getroffen werden kann.<br/><strong>Wichtig:</strong> Gruppentransaktionen mit teilweiser Zahlung per Geschenkkarte können nur von Buckaroo Plaza aus erstattet werden."
 "You have not yet added any giftcards","Es wurden noch keine Geschenkkarten hinzugefügt"
 "Add New Giftcard","Neuen Geschenkgutschein hinzufügen"
 "Service Code","Service code"
