--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -308,8 +308,11 @@
 "Giftcards","Cartes cadeaux"
 "Enable Giftcards","Activer les cartes-cadeaux"
 "Allowed giftcards","Cartes-cadeaux autorisées"
-"Select which giftcards are available in the checkout. You can add new giftcards within Magento at → Stores → Buckaroo Giftcards.","Sélectionnez les cartes-cadeaux disponibles pour le client. Vous pouvez ajouter de nouvelles cartes dans Boutiques > Cartes-cadeaux Buckaroo."
+"Select which giftcards are available in the checkout. You can add new giftcards within Magento at → Stores → Buckaroo Giftcards.","Sélectionnez les cartes-cadeaux disponibles lors du paiement. Vous pouvez ajouter de nouvelles cartes-cadeaux dans Magento à → Stores → Cartes-cadeaux Buckaroo."
 "These options will be presented to the customer after Buckaroo has received the order. If left blank, the available options will be based on which Buckaroo payment options you have enabled.","Ces options seront présentées au client après réception de la commande par Buckaroo. Si laissé vide, les options disponibles seront basées sur les options de paiement Buckaroo que vous avez activées."
+"Sort Giftcards","Trier les cartes-cadeaux"
+"Giftcard handling","Gestion des cartes-cadeaux"
+"How to show the giftcard payment method in the checkout. <br/><strong>Inline:</strong> giftcards are show seperate in checkout<br/><strong>Redirect:</strong> giftcards get redirected to the buckaroo checkout. <br/><strong>Important:</strong> Group giftcards can only be refunded from the Buckaroo Plaza.","Comment afficher la méthode de paiement par carte-cadeau lors du paiement. <br/><strong>Inline:</strong> Les cartes-cadeaux sont affichées séparément lors du paiement.<br/><strong>Redirect:</strong> Les cartes-cadeaux sont redirigées vers la page de paiement Buckaroo.<br/><strong>Wichtig:</strong> Une transaction de groupe avec un paiement partiel par carte-cadeau ne peut être remboursée que depuis Buckaroo Plaza."
 "You have not yet added any giftcards","Vous n'avez pas encore ajouté de cartes-cadeaux"
 "Add New Giftcard","Ajouter une nouvelle carte-cadeau"
 "Service Code","Indicatif d'entretien"
