--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -316,6 +316,9 @@
 "Allowed giftcards","Geaccepteerde cadeaukaarten"
 "Select which giftcards are available in the checkout. You can add new giftcards within Magento at → Stores → Buckaroo Giftcards.","Selecteer welke cadeaukaarten beschikbaar zijn voor de consument. Nieuwe cadeaukaarten kunnen via Stores > Buckaroo giftcards worden toegevoegd."
 "These options will be presented to the customer after Buckaroo has received the order. If left blank, the available options will be based on which Buckaroo payment options you have enabled.","Deze opties zullen aan de klant voorgelegd worden nadat Buckaroo de bestelling ontvangen heeft. Als deze leeg gelaten wordt, dan zullen de beschikbare opties gebaseerd worden op welke Buckaroo betaalopties je ingeschakeld hebt."
+"Sort Giftcards","Volgorde van de Giftcards"
+"Giftcard handling","Giftcard handling"
+"How to show the giftcard payment method in the checkout. <br/><strong>Inline:</strong> giftcards are show seperate in checkout<br/><strong>Redirect:</strong> giftcards get redirected to the buckaroo checkout. <br/><strong>Important:</strong> Group giftcards can only be refunded from the Buckaroo Plaza.","Hoe je de cadeaukaart-betaalmethode kunt weergeven bij het afrekenen. <br/><strong>Inline:</strong> Cadeaukaarten worden apart getoond bij het afrekenen.<br/><strong>Redirect:</strong> De consument word doorgestuurd naar de Buckaroo betaalpagina en daar kan de keuze van de cadeaukaart worden gemaakt.<br/><strong>Important:</strong> Groepstransacties met een gedeeltelijke giftcardbetaling kunnen alleen vanuit Buckaroo Plaza worden terugbetaald."
 "You have not yet added any giftcards","Er zijn geen giftcards toegevoegd"
 "Add New Giftcard","Nieuwe cadeaukaart toevoegen"
 "Service Code","Service Code"
